[aliases]
test=pytest

[coverage:run]
source = gcn
omit = gcn/tests/*
parallel = True
concurrency =
    thread

[metadata]
name = pygcn
license = GPL-2+
license_file = LICENSE.md
long_description = file:README.md
long_description_content_type = text/markdown
author = Leo Singer
author_email = leo.singer@ligo.org
url = https://github.com/lpsinger/pygcn
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Scientific/Engineering :: Astronomy
project_urls =
    Bug Tracker = https://github.com/lpsinger/pygcn/issues
    Source Code = https://github.com/lpsinger/pygcn

[options]
packages = find:
python_version = >=3.6
install_requires =
    lxml
tests_require =
    importlib-resources;python_version<'3.7'
    pytest

[options.entry_points]
console_scripts =
    pygcn-listen = gcn.cmdline:listen_main
    pygcn-serve = gcn.cmdline:serve_main

[options.package_data]
gcn.tests.data = *.xml
